tests/exploratory/errors/test_pointer_slice_step.sn
# Exploratory test: Pointer slice with step parameter
# Step parameter is not supported for pointer slicing because
# rt_array_create_* only supports contiguous memory copying.
# This should produce a clear error message.

native fn get_buffer(): *byte
native fn get_length(): int =>
    return 10

fn test_pointer_slice_with_step(): void =>
    var len: int = get_length()
    # Attempt to use step parameter with pointer slice
    # This should be rejected at compile time
    var data: byte[] = get_buffer()[0..len:2] as val
    print($"Data: {data}\n")

fn main(): int =>
    test_pointer_slice_with_step()
    return 0
